--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,15 @@
 	</properties>
 
 	<dependencies>
-        <!-- Web -->
+        <!-- Application -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
         <!-- Dev Tools -->
         <dependency>
@@ -32,6 +36,11 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.38</version>
+        </dependency>
 
         <!-- Tests -->
 		<dependency>
