--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,17 @@
             <version>1.18.38</version>
         </dependency>
 
+        <!-- Database -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.5</version>
+        </dependency>
+
         <!-- Tests -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
