--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=job-management
+
+# Database
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/rocketseat
+spring.datasource.username=docker
+spring.datasource.password=docker@rocketseat
+spring.jpa.hibernate.ddl-auto=update
