--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,12 @@
             <version>42.7.5</version>
         </dependency>
 
+        <!-- Security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
         <!-- Tests -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
