feat: Encrypting the company's password, and creating the authentication route and use case

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
+        <!-- Authentication -->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>4.4.0</version>
+        </dependency>
+
         <!-- Tests -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
