--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/rocketseat
 spring.datasource.username=docker
 spring.datasource.password=docker@rocketseat
 spring.jpa.hibernate.ddl-auto=update
+
+# Security
+security.token.issuer="rocketseat.com.br"
+security.token.secret="0197656a-270e-7cf6-9e70-76a617720229"
