--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3.8"
 
 volumes:
-    postgresql:
+    rocketseat_db:
 
 services:
-    postgres:
+    database:
         image: bitnami/postgresql:17.5.0
-        container_name: postgres
+        container_name: database
         environment:
             POSTGRESQL_USERNAME: docker
             POSTGRESQL_PASSWORD: docker@rocketseat
@@ -14,4 +14,4 @@ services:
         ports:
             - "5432:5432"
         volumes:
-            - postgresql:/var/lib/postgresql/data
+            - rocketseat_db:/var/lib/postgresql/data
