--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.datasource.password=docker@rocketseat
 spring.jpa.hibernate.ddl-auto=update
 
 # Security
-security.token.issuer="rocketseat.com.br"
-security.token.secret="0197656a-270e-7cf6-9e70-76a617720229"
+security.token.issuer=rocketseat.com.br
+security.token.secret=0197656a-270e-7cf6-9e70-76a617720229
